# numerica

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/numerica/: numeriaca.h
include/numerica/detail/: checks.h  result.h  tolerance.h
plan/: paradigm.md
tests/: CMakeLists.txt  smoke_test.cpp  test_smoke.cpp
